[package]
name = "core_security_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
subprocess = "0.2.9"
uuid = { version = "1.3.0", features = ["v4"] }
home = "0.5.5"
regex = "1.11.1"
fs = "0.0.5"
