[package]
name = "subnet_portability_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }
regex = "1.8.1" # For pattern matching
